fix the askmum button the text link was visible

--- a/app/assets/stylesheets/partials/_ecommerce.css.scss
+++ b/app/assets/stylesheets/partials/_ecommerce.css.scss
@@ -358,7 +358,8 @@
     top: -30px;
     right: -60px;
     z-index: 1200;
-    background: image-url('askmum.png') center 0 no-repeat;
+    background: image-url('askmum.png') center 0 no-repeat; 
+    overflow: hidden;
   }
   .photos-carousel {
     float: left;
